[package]
name = "my_actix_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
rusqlite = { version = "0.28", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.7"  # Adjust the version as needed
log = "0.4"
env_logger = "0.10" # or the version you're using
serde_json = "1"  # Add serde_json for JSON handling
